<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Bitocle</string>
    <string name="app_url">http://mthli.github.io</string>

    <!-- Login -->
    <string name="login_menu_about">About</string>
    <string name="login_sp">OAuthFile</string>
    <string name="login_sp_oauth">OAuth</string>
    <string name="login_sp_username">Username</string>
    <string name="login_sp_highlight_num">Num</string>
    <string name="login_sp_highlight_css">CSS</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_philosophy">
        Do one thing and do it well.
    </string>
    <string name="login_intent">Intent</string>
    <string name="login_thread">LoginThread</string>
    <string name="login_permission_notifications">notifications</string>
    <string name="login_permission_repo">repo</string>
    <string name="login_permission_user">user</string>
    <string name="login_message_miss_both">Miss Username and Password</string>
    <string name="login_message_miss_username">Miss Username</string>
    <string name="login_message_miss_password">Miss Password</string>
    <string name="login_message_authoring">Authoring</string>
    <string name="login_message_auth_failed">Auth Failed</string>

    <!-- Main -->
    <string name="main_menu_star">Star</string>
    <string name="main_menu_bookmark">Bookmark</string>
    <string name="main_menu_refresh">Refresh</string>
    <string name="main_menu_highlight">Highlight</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_logout">Logout</string>
    <string-array name="dialog_highlight_list">
        <item>GitHub</item>
        <item>Monokai</item>
        <item>Solarized</item>
        <item>Sunburst</item>
        <item>Tomorrow</item>
    </string-array>
    <string name="main_logout_failed">Logout Failed</string>

    <!-- Repo -->
    <string name="repo_item_icon">Icon</string>
    <string name="repo_item_overflow">Overflow</string>
    <string name="repo_item_overflow_commit">Commit</string>
    <string name="repo_item_overflow_remove">Remove</string>
    <string name="repo_item_unknown">Unknown</string>
    <string name="repo_item_star">Star</string>
    <string name="repo_item_fork">Fork</string>
    <string name="repo_empty_description">No description.</string>
    <string name="repo_empty_list">
        Use "search" or "star" to add some repos.
    </string>
    <string name="repo_empty_error">
        404 Page not found.
    </string>
    <string name="repo_add_successful">Add Successful</string>
    <string name="repo_add_failed">Add Failed</string>
    <string name="repo_refresh_successful">Refresh Successful</string>
    <string name="repo_refresh_failed">Refresh Failed</string>

    <!-- Bookmark -->
    <string name="bookmark_label">Bookmark</string>
    <string name="bookmark_item_icon">Icon</string>
    <string name="bookmark_choice_remove">Remove</string>
    <string name="bookmark_remove_successful">Remove Successful</string>
    <string name="bookmark_empty_list">
        You can add bookark from long click repo item.
    </string>
    <string name="bookmark_empty_error">
        404 Page not found.
    </string>
    <string name="bookmark_refresh_successful">Refresh Successful</string>
    <string name="bookmark_refresh_failed">Refresh Failed</string>

    <!-- Star -->
    <string name="star_label">Star</string>
    <string name="star_item_overflow_commit">Commit</string>
    <string name="star_item_overflow_add">Add</string>
    <string name="star_refresh_successful">Refresh Successful</string>
    <string name="star_refresh_failed">Refresh Failed</string>

    <!-- Content -->
    <string name="content_item_icon">Icon</string>
    <string name="content_choice_add">Add</string>
    <string name="content_add_successful">Add Successful</string>
    <string name="content_database_error">
        Open Database Failed
    </string>
    <string name="content_empty_list">
        Empty list.
    </string>
    <string name="content_empty_error">
        404 Page not found.
    </string>
    <string name="content_refresh_successful">Refresh Successful</string>
    <string name="content_refresh_failed">Refresh Failed</string>

    <!-- Overflow -->
    <string name="overflow_remove_successful">Remove Successful</string>
    <string name="overflow_remove_failed">Remove Failed</string>
    <string name="overflow_add_successful">Add successful</string>
    <string name="overflow_add_failed">Add Failed</string>

    <!-- Commit -->
    <string name="commit_label">Commit</string>
    <string name="commit_item_icon">Icon</string>
    <string name="commit_empty_list">
        This project has no commit histroy.
    </string>
    <string name="commit_empty_error">
        404 Page not found.
    </string>
    <string name="commit_refresh_successful">Refresh Successful</string>
    <string name="commit_refresh_failed">Refresh Failed</string>

    <!--WebView -->
    <string name="webview_label">WebView</string>
    <string name="webview_menu_refresh">Refresh</string>
    <string name="webview_menu_highlight">Highlight</string>
    <string name="webview_intent_title">Title</string>
    <string name="webview_intent_subtitle">SubTitle</string>
    <string name="webview_intent_owner">Owner</string>
    <string name="webview_intent_name">Name</string>
    <string name="webview_intent_sha">Sha</string>
    <string name="webview_encoding">UTF-8</string>
    <string name="webview_unsupport">UnSupport</string>
    <string name="webview_default_css">github</string>
    <string name="webview_wait">Wait a Moment</string>
    <string name="webview_empty_error">
        404 Page not found.
    </string>

    <!-- About -->
    <string name="about_label">About</string>
    <string name="about_button_close">Close</string>
    <string name="about_button_star">Star It</string>
    <string name="about_readme">README.html</string>
    <string name="about_url">https://github.com/mthli/Bitocle</string>
    <string name="about_author">mthli</string>
    <string name="about_name">Bitocle</string>
    <string name="about_thx">Thank you for your star :)</string>

    <!-- Other -->
    <string name="pull_to_refresh_pull_label">Pull to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Loading</string>

</resources>
